# amplifier-collection-dev-memory

./: .gitignore  ARCHITECTURE.md  INSTALL.md  INSTALLATION.md  LICENSE  QUICK-START.md  README.md  bundle.md  bundle.yaml  collection.yaml  pyproject.toml
agents/: memory-partner.md  memory-retrieval.md
behaviors/: dev-memory.yaml
context/: DELEGATION-RULES.md  auto-context.md  memory-instructions.md  memory-partner-instructions.md  memory-system-guide.md  memory-writer-instructions.md
docs/specs/: 2026-04-07-memory-v2-design.md
