[project]
name = "amplifier-collection-dev-memory"
version = "1.0.0"
description = "Persistent memory system for Amplifier - maintains context across all sessions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ramparte"}
]
keywords = ["amplifier", "memory", "context", "development", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/ramparte/amplifier-collection-dev-memory"
Repository = "https://github.com/ramparte/amplifier-collection-dev-memory"
Issues = "https://github.com/ramparte/amplifier-collection-dev-memory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
